ghost/beezuscomplex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beezuscomplex
  namespace: ghost
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: beezuscomplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beezuscomplex
                port:
                  number: 2368
  tls:
    - hosts:
        - beezuscomplex.com
        - www.beezuscomplex.com
      secretName: beezuscomplex-com-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beezuscomplex-ext
  namespace: ghost
spec:
  ingressClassName: "nginx-external"
  rules:
    - host: beezuscomplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beezuscomplex
                port:
                  number: 2368
  tls:
    - hosts:
        - beezuscomplex.com
        - www.beezuscomplex.com
      secretName: beezuscomplex-com-cert
